# py-rust

./: .gitignore  Cargo.toml  README.md  pyproject.toml
benchmark/: main.py
src/: lib.rs
